# spaceapi-rs

./: .ackrc  .editorconfig  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PULL_REQUEST_TEMPLATE.md  README.md  build.rs
.circleci/: config.yml
.github/workflows/: ci.yml
examples/: deserialization.rs  serialization.rs
scripts/: github_rust_docs_key.enc  travis-doc-upload.sh
src/: lib.rs  optional.rs  sensors.rs  sensors.rs.in  status.rs  status.rs.in  utils.rs
src/sensors/: account_balance.rs  barometer.rs  beverage_supply.rs  door_locked.rs  humidity.rs  mod.rs  network_connections.rs  network_traffic.rs  people_now_present.rs  power_consumption.rs  radiation.rs  temperature.rs  total_member_count.rs  wind.rs
