[package]
name = "spaceapi"
version = "0.5.1"
documentation = "https://docs.rs/spaceapi/0.5.1/"
repository = "https://github.com/coredump-ch/spaceapi-rs/"
license = "MIT OR Apache-2.0"
authors = [
    "Raphael Nestler <raphael.nestler@gmail.com>",
    "Danilo Bargen <mail@dbrgn.ch>",
    "Stefan Schindler <stefan@estada.ch>",
]
description = "Space API types and serialization/deserialization."
readme = "README.md"
keywords = ["spaceapi", "hackerspaces", "status", "api"]
categories = ["api-bindings"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "AUTHORS.md",
]

[badges]
travis-ci = { repository = "coredump-ch/spaceapi-rs" }

[dependencies]
log = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
